[package]
name = "rfc7239"
version = "0.1.3"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
description = "Parser for rfc7239 formatted Forwarded headers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/icewind1991/rfc7239"
documentation = "https://docs.rs/rfc7239"
rust-version = "1.56.1"

[dependencies]
uncased = "0.9.10"

[features]
std = []
default = ["std"]